syntax = "proto3";

option csharp_namespace = "Discounts.Grpc.Protos";


service DiscountsProtoService {
	rpc GetDiscount(GetDiscountRequest) returns (CouponRequest);
	rpc CreateDiscount(CouponRequest) returns (CouponRequest);
	rpc UpdateDiscount(CouponRequest) returns (CouponRequest);
	rpc DeleteDiscount() returns ();
}

message GetDiscountRequest{
	string product_id = 1;
}


message CouponRequest{
	int32 id = 1;
	string product_id = 1;
	string product_name = 1;
	string description = 1;
	int32 amount = 5; 
}

message DeleteDiscountRequest {
	string product_id = 1; 
}
message DeleteDiscountResponse {
bool success = 1;
}
